fixing of HW3 21.02.2022 20:49